	- Added lib/Imager/Transformations.pod, some docs of simple transforms.
	- Added lib/Imager/ImageTypes.pod, draft of ImageType pod.
	- Added lib/Imager/Filters.pod, draft of Filters pod.
	- Added lib/Imager/Engines.pod, draft of Engines pod.
        - added getpixel() and setpixel() methods
        - added Artur's OSX dlload() emulation, with minor changes
        - modified _color() to work around a 5.6.0 bug
        - replaced old gif options with tags
        - we now log which memory block is being freed before giving 
          an error on it being re-freed
        - fixed stupid bug in deleting tags
	- fixed minor pod errors involving &gt;

0.40?
        - make t1log optional, defaulting to off.  You can enable the log
          with Imager::init(t1log=>1) (Ticket #369)
        - quote a few hash key strings to prevent warnings on 5.004
        - modify quantization code to handle 1 channel images 
          correctly (Ticket #365)
        - make channel pointer to i_gsamp() const int * so we can pass
          const arrays
        - handle the presence of the default broken giflib better,
          by giving them some more prose about the problem, and skipping
          all but the first test that fails with the broken giflib
        - i_box_cfill() went into an infinite loop on fountain fills
          or fills on images with more than 8-bits/sample
        - hide more of our Darwin dlload emulation to prevent runtime
          symbol conflicts
        - use INT2PTR() and PTR2IV() macros instead of direct casts to
          prevent pointer vs int size warnings on 64-bit builds of perl.
        - add our own INT2PTR and PTR2IV definitions when perl doesn't
          supply them

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
