@@ -22,6 +22,7 @@ Imager::Filters - Entire Image Filtering Operations
   unload_plugin("dynfilt/dyntest.so")
     or die "unable to load plugin\n";
 
+  $out = $img->difference(other=>$other_img);
 
 =head1 DESCRIPTION
 
@@ -397,5 +398,21 @@ Note: This seems to test ok on the following systems:
 Linux, Solaris, HPUX, OpenBSD, FreeBSD, TRU64/OSF1, AIX.
 If you test this on other systems please let me know.
 
+=head2 Image Difference
+
+You can create a new image that is the difference between 2 other images.
+
+  my $diff = $img->difference(other=>$other_img);
+
+For each pixel in $img that is different to the pixel in $other_img,
+the pixel from $other_img is given, otherwise the pixel is transparent
+black.
+
+This can be used for debugging image differences ("Where are they
+different?"), and for optimizing animated GIFs.
+
+Note that $img and $other_img must have the same number of channels.
+The width and heigh of $diff will be the minimum of each of the width
+and height of $img and $other_img.
 
 =cut
